--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>                                                                       
                                                                               
 <body>                                                                        
-    <h1>This is just a simple calcultor app</h1>                              
+    <h1>This is just a simple calculator app</h1>                              
     <button onClick='retry()'>Click to run again</button>                     
     <script src='./calculator.js'></script>                                   
 </body>                                                                       
